# file-utils

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run-test  tests.sh
.github/workflows/: github-actions-tests.yml
src/: README.md  lib.rs  main.rs  read_delim.rs  tail.rs  utils.rs  with_custom_delim.rs  with_custom_delims.rs  with_eol.rs
src/utils/: byte.rs  mod.rs  non_ascii_char.rs  read_delim.rs  test_utils.rs  utils.rs
tests/: README.md  tests_WithCustomDelims_EOL_between.rs  tests_WithCustomDelims_EOL_count_lines.rs  tests_WithCustomDelims_EOL_head.rs  tests_WithCustomDelims_EOL_parse.rs  tests_WithCustomDelims_EOL_tail.rs  tests_WithCustomDelims_between.rs  tests_WithCustomDelims_count_lines.rs  tests_WithCustomDelims_head.rs  tests_WithCustomDelims_parse.rs  tests_WithCustomDelims_tail.rs  tests_WithEOL_between.rs  tests_WithEOL_count_lines.rs  tests_WithEOL_head.rs  tests_WithEOL_parse.rs  tests_WithEOL_tail.rs  tests_byte.rs  tests_custom_delims_tail.rs  tests_non_ascii_char.rs  tests_tail.rs  tests_with_custom_delim_parse.rs  tests_with_custom_delims_between.rs  tests_with_custom_delims_count_lines.rs  tests_with_custom_delims_head.rs
tests_python/: README.md  custom_files.py  tests.py
tests_python/WithCustomDelims/: tests_between.py  tests_count_lines.py  tests_head.py  tests_parse.py  tests_tail.py
tests_python/WithCustomDelims_OEL/: tests_between.py  tests_count_lines.py  tests_head.py  tests_parse.py  tests_tail.py
tests_python/WithEOF/: custom_files.py  tests_between.py  tests_count_lines.py  tests_head.py  tests_parse.py  tests_tail.py
tests_python/tests_python/: tests_tail.py
