[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "file_utils"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["head", "begin", "tail", "end", "parse", "search", "count_lines", "count", "line", "lines", "utf", "files"]

[tool.maturin]
features = ["pyo3/extension-module"]
